Reports page done, changed report table and made multiple UI changes
